E-commerce Review Summary Writer

--- a/Prompt Engineering Course.ipynb
+++ b/Prompt Engineering Course.ipynb
@@ -442,6 +442,116 @@
     "\n",
     "#here the answer comes out to be correct"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b264afc",
+   "metadata": {},
+   "source": [
+    "## Let's explore the summary building capability of ChatGPT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0e22a6c",
+   "metadata": {},
+   "source": [
+    "### let's build a reviewer reader for a ecommerce site that can have following features:\n",
+    "* It should be able to summarise the review based on the following context filters:\n",
+    "    * Product\n",
+    "    * Pricing\n",
+    "    * Shipping\n",
+    "* It should be able to summarise the review to the number of words inputted by user.\n",
+    "* In the summary it should be able to put more focus on a particular context.The context can be the following and will be inputted by user\n",
+    "    * Product\n",
+    "    * Pricing\n",
+    "    * Shipping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1152f9ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#define some custom data types\n",
+    "from enum import Enum\n",
+    "from typing import Any\n",
+    "\n",
+    "# for context\n",
+    "class Context(Enum):\n",
+    "    PRODUCT=\"PRODUCT\"\n",
+    "    PRICING=\"PRICING\"\n",
+    "    SHIPPING=\"SHIPPING\"\n",
+    "\n",
+    "# a data type that is used to limiting the number of words \n",
+    "class LimitNumber:\n",
+    "    def __init__(self, value):\n",
+    "        if not isinstance(value, int) or value <= 0:\n",
+    "            raise ValueError(\"Value must be a positive integer.\")\n",
+    "        self.value = value\n",
+    "        \n",
+    "class ContextReviewPrompts():\n",
+    "    \n",
+    "    PRODUCT_REVIEW_PROMPT=\"\"\"to give feedback to the \\\n",
+    "    product deparmtment, responsible for overseeing merchandise in online \\\n",
+    "    business operations and strategies.  \\\n",
+    "\n",
+    "    Summarize the review below, delimited by triple \\\n",
+    "    backticks,by focusing on any aspects \\\n",
+    "    that are relevant to the product quality.\"\"\"\n",
+    "    \n",
+    "    SHIPPING_REVIEW_PROMPT=\"\"\"to give feedback to the \\\n",
+    "    shipping deparmtment. \\\n",
+    "\n",
+    "    Summarize the review below, delimited by triple \\\n",
+    "    backticks, by focusing on any aspects \\\n",
+    "    that are relevant to the shipping and delivery\"\"\"\n",
+    "    \n",
+    "    PRICING_REVIEW_PROMPT=\"\"\"\n",
+    "    to give feedback to the \\\n",
+    "    pricing deparmtment, responsible for determining the \\\n",
+    "    price of the product.  \\\n",
+    "\n",
+    "    Summarize the review below, delimited by triple \\\n",
+    "    backticks, by focusing on any aspects \\\n",
+    "    that are relevant to the price and perceived value.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __call__(self, context: Context) -> Any:\n",
+    "        \n",
+    "        if context == Context.PRODUCT:\n",
+    "            return self.PRODUCT_REVIEW_PROMPT\n",
+    "        \n",
+    "        if context == Context.PRICING:\n",
+    "            return self.SHIPPING_REVIEW_PROMPT\n",
+    "        \n",
+    "        if context == Context.SHIPPING:\n",
+    "            return self.SHIPPING_REVIEW_PROMPT  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8ea62521",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'to give feedback to the     shipping deparmtment. \\n    Summarize the review below, delimited by triple     backticks, by focusing on any aspects     that are relevant to the shipping and delivery'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "context_review_prompts=ContextReviewPrompts()\n",
+    "context_review_prompts(Context.PRICING)"
+   ]
   }
  ],
  "metadata": {
@@ -460,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
