Build Review Reader using ChatGPT summarising capability

--- a/Prompt Engineering Course.ipynb
+++ b/Prompt Engineering Course.ipynb
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1152f9ba",
    "metadata": {},
    "outputs": [],
@@ -484,6 +484,10 @@
     "    PRODUCT=\"PRODUCT\"\n",
     "    PRICING=\"PRICING\"\n",
     "    SHIPPING=\"SHIPPING\"\n",
+    "    \n",
+    "class SummaryType(Enum):\n",
+    "    CONTEXTRELEVANT=\"RELEVANT TO CONTEXT\"\n",
+    "    FULLSUMMARY=\"FULL SUMMARY\"\n",
     "\n",
     "# a data type that is used to limiting the number of words \n",
     "class LimitNumber:\n",
@@ -491,6 +495,7 @@
     "        if not isinstance(value, int) or value <= 0:\n",
     "            raise ValueError(\"Value must be a positive integer.\")\n",
     "        self.value = value\n",
+    "    \n",
     "        \n",
     "class ContextReviewPrompts():\n",
     "    \n",
@@ -525,33 +530,115 @@
     "            return self.PRODUCT_REVIEW_PROMPT\n",
     "        \n",
     "        if context == Context.PRICING:\n",
-    "            return self.SHIPPING_REVIEW_PROMPT\n",
+    "            return self.PRICING_REVIEW_PROMPT\n",
     "        \n",
     "        if context == Context.SHIPPING:\n",
-    "            return self.SHIPPING_REVIEW_PROMPT  "
+    "            return self.SHIPPING_REVIEW_PROMPT  \n",
+    "        \n",
+    "class SummarySpecificPrompts():\n",
+    "    \n",
+    "    CONTEXTRELEVANT=\"to extract relevant information from\"\n",
+    "    FULLSUMMARY=\"to generate a short summary from\"\n",
+    "    \n",
+    "    def __call__(self,summary_type: SummaryType):\n",
+    "        \n",
+    "        if summary_type == SummaryType.FULLSUMMARY:\n",
+    "            return self.FULLSUMMARY\n",
+    "        \n",
+    "        if summary_type == SummaryType.CONTEXTRELEVANT:\n",
+    "            return self.CONTEXTRELEVANT\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "8ea62521",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#utils functions;\n",
+    "\n",
+    "def get_context_prompt(context: Context=Context.PRODUCT):\n",
+    "    \n",
+    "    context_based_prompt=ContextReviewPrompts()\n",
+    "    return context_based_prompt(context = context)\n",
+    "\n",
+    "def get_summary_type_prompt(summary_type: SummaryType = SummaryType.FULLSUMMARY):\n",
+    "    summary_type_prompts=SummarySpecificPrompts()\n",
+    "    return summary_type_prompts(summary_type = summary_type)\n",
+    "\n",
+    "def get_final_prompt(review,context: Context = Context.PRODUCT, summary_type : SummaryType = SummaryType.FULLSUMMARY, \\\n",
+    "                    total_words : LimitNumber = None ):\n",
+    "    \n",
+    "    summary_prompt=get_summary_type_prompt(summary_type)\n",
+    "    context_prompt=get_context_prompt(context)\n",
+    "    \n",
+    "    prompt= f\"\"\"Your task is {summary_prompt} a product \\\n",
+    "    review from an ecommerce site {context_prompt} \\\n",
+    "\n",
+    "    Review: ```{review}```\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if total_words:\n",
+    "        limit_to_words=total_words.value\n",
+    "        prompt=f\"\"\"Your task is {summary_prompt} from a product \\\n",
+    "        review from an ecommerce site {context_prompt} \\\n",
+    "        \n",
+    "        Limit to {limit_to_words} words. \\\n",
+    "        \n",
+    "        Review: ```{review}``` \n",
+    "        \"\"\"\n",
+    "        \n",
+    "    return prompt\n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b559f94a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'to give feedback to the     shipping deparmtment. \\n    Summarize the review below, delimited by triple     backticks, by focusing on any aspects     that are relevant to the shipping and delivery'"
+       "'Your task is to generate a short summary of a product         review from an ecommerce site to give feedback to the     product deparmtment, responsible for overseeing merchandise in online     business operations and strategies.  \\n    Summarize the review below, delimited by triple     backticks,by focusing on any aspects     that are relevant to the product quality.         \\n        Limit to 10 words.         \\n        Review: `````` \\n        '"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "context_review_prompts=ContextReviewPrompts()\n",
-    "context_review_prompts(Context.PRICING)"
+    "review= \"\"\"\n",
+    "Got this panda plush toy for my daughter's birthday, \\\n",
+    "who loves it and takes it everywhere. It's soft and \\ \n",
+    "super cute, and its face has a friendly look. It's \\ \n",
+    "a bit small for what I paid though. I think there \\ \n",
+    "might be other options that are bigger for the \\ \n",
+    "same price. It arrived a day earlier than expected, \\ \n",
+    "so I got to play with it myself before I gave it \\ \n",
+    "to her.\n",
+    "\"\"\"\n",
+    "context=\"SHIPPING\"\n",
+    "summary_type=\"FULLSUMMARY\"\n",
+    "limit_to_words=LimitNumber(10)\n",
+    "# limit_to_words=None\n",
+    "\n",
+    "prompt=get_final_prompt(review,context = Context[context], summary_type = SummaryType[summary_type],total_words=limit_to_words)\n",
+    "\n",
+    "get_completion(prompt)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "204a682d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
