--- a/Prompt Engineering Course.ipynb
+++ b/Prompt Engineering Course.ipynb
@@ -456,7 +456,7 @@
    "id": "e0e22a6c",
    "metadata": {},
    "source": [
-    "### let's build a reviewer reader for a ecommerce site that can have following features:\n",
+    "### let's build a review reader for a ecommerce site that can have following features:\n",
     "* It should be able to summarise the review based on the following context filters:\n",
     "    * Product\n",
     "    * Pricing\n",
@@ -630,6 +630,188 @@
     "prompt=get_final_prompt(review,context = Context[context], summary_type = SummaryType[summary_type],total_words=limit_to_words)\n",
     "\n",
     "get_completion(prompt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c2abf39",
+   "metadata": {},
+   "source": [
+    "## We can also do following ML based tasks with ChatGPT:\n",
+    "* Sentiment Analysis\n",
+    "* Emotion Prediction\n",
+    "* Topic Prediction\n",
+    "* Label Extraction (Extraction particular labels like company name,product name from text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a7f71909",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lamp_review = \"\"\"\n",
+    "Needed a nice lamp for my bedroom, and this one had \\\n",
+    "additional storage and not too high of a price point. \\\n",
+    "Got it fast. But the string was not working.Asked for replacement.Got the new one in three days.\n",
+    "The new one also had an issue in thier lamp.Thier product qualtity is too bad.The customer service is also not good.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25d79f8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = f\"\"\"\n",
+    "Identify the following items from the review text: \n",
+    "- Sentiment (positive or negative)\n",
+    "- Is the reviewer expressing anger? (true or false)\n",
+    "- Item purchased by reviewer\n",
+    "- Company that made the item\n",
+    "\n",
+    "The review is delimited with triple backticks. \\\n",
+    "Format your response as a JSON object with \\\n",
+    "\"Sentiment\", \"Anger\", \"Item\" and \"Brand\" as the keys.\n",
+    "If the information isn't present, use \"unknown\" \\\n",
+    "as the value.\n",
+    "Make your response as short as possible.\n",
+    "Format the Anger value as a boolean.\n",
+    "\n",
+    "Review text: '''{lamp_review}'''\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c504cc4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#we can also ask the model for confidence value of each emotion prediction\n",
+    "prompt = f\"\"\"\n",
+    "Identify a list of emotions that the writer of the \\\n",
+    "following review is expressing. Include no more than \\\n",
+    "five items in the list.\n",
+    "\n",
+    "Also for which emotion, give the confidence value indicating your confidence regarding presence of that particular emotion.\n",
+    "\n",
+    "Please give answer in following format\n",
+    "```\n",
+    "Emotions: List of emotions here\n",
+    "Confidence: List of confidence value correspoing to each emotion present in Emotions.\n",
+    "```\n",
+    "Confidence value should be between 0 and 1.\n",
+    "\n",
+    "Review text: '''{lamp_review}'''\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a17ca85f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predict topics of a text\n",
+    "story = \"\"\"\n",
+    "In a recent survey conducted by the government, \n",
+    "public sector employees were asked to rate their level \n",
+    "of satisfaction with the department they work at. \n",
+    "The results revealed that NASA was the most popular \n",
+    "department with a satisfaction rating of 95%.\n",
+    "\n",
+    "One NASA employee, John Smith, commented on the findings, \n",
+    "stating, \"I'm not surprised that NASA came out on top. \n",
+    "It's a great place to work with amazing people and \n",
+    "incredible opportunities. I'm proud to be a part of \n",
+    "such an innovative organization.\"\n",
+    "\n",
+    "The results were also welcomed by NASA's management team, \n",
+    "with Director Tom Johnson stating, \"We are thrilled to \n",
+    "hear that our employees are satisfied with their work at NASA. \n",
+    "We have a talented and dedicated team who work tirelessly \n",
+    "to achieve our goals, and it's fantastic to see that their \n",
+    "hard work is paying off.\"\n",
+    "\n",
+    "The survey also revealed that the \n",
+    "Social Security Administration had the lowest satisfaction \n",
+    "rating, with only 45% of employees indicating they were \n",
+    "satisfied with their job. The government has pledged to \n",
+    "address the concerns raised by employees in the survey and \n",
+    "work towards improving job satisfaction across all departments.\n",
+    "\"\"\"\n",
+    "\n",
+    "prompt = f\"\"\"\n",
+    "Determine five topics that are being discussed in the \\\n",
+    "following text, which is delimited by triple backticks.\n",
+    "\n",
+    "Make each item one or two words long. \n",
+    "\n",
+    "Format your response as a list of items separated by commas.\n",
+    "\n",
+    "Text sample: '''{story}'''\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0495ff3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "topic_list = [\n",
+    "    \"nasa\", \"local government\", \"engineering\", \n",
+    "    \"employee satisfaction\", \"federal government\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dfe1f67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = f\"\"\"\n",
+    "Determine whether each item in the following list of \\\n",
+    "topics is a topic in the text below, which\n",
+    "is delimited with triple backticks.\n",
+    "\n",
+    "Give your answer as list with 0 or 1 for each topic.\\\n",
+    "\n",
+    "List of topics: {\", \".join(topic_list)}\n",
+    "\n",
+    "Text sample: '''{story}'''\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b240a97",
+   "metadata": {},
+   "source": [
+    "### Some Important Findings\n",
+    "* Let suppose in a text that has positive sentiment,models was asked to give the negative emotions,then model will inlcude some postive emotions in the list.\n",
+    "* Hence in this case we should follow the principal of giving the model time to think.\n",
+    "* We can ask the model to follow following steps:\n",
+    "    * Predict the Sentiment\n",
+    "    * If positive,list down the positive emotions\n",
+    "    * If negative,do nothing."
    ]
   },
   {
