--- a/Prompt Engineering Course.ipynb
+++ b/Prompt Engineering Course.ipynb
@@ -815,11 +815,247 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6c0b9250",
+   "metadata": {},
+   "source": [
+    "## Transforming capapbilities of ChatGPT\n",
+    "\n",
+    "We can use ChatGPT to do the following things:\n",
+    "* Translation from one lanuage to another lanuage.\n",
+    "* Translation or conversion of a text into different tunes.For example converting a piece of text into formal or informal tunes.\n",
+    "* It can be used as a Universal Translator!!!\n",
+    "* It can be used to grammar correction.\n",
+    "* Convert one format of piece of text to another format.For example JSON to HTML or python to JAVA.\n",
+    "\n",
+    "Let's explore each one of the example one by one"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "204a682d",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# translation\n",
+    "prompt = f\"\"\"\n",
+    "Translate the following spanish text to Sanskrit: \\ \n",
+    "```Hola, me gustaría ordenar una licuadora.```\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt)\n",
+    "print(response)\n",
+    "\n",
+    "#NOTE: \n",
+    "    #   If instead of spanish text,I use only the text in the prompt,then model results quanlity decreases.\n",
+    "    # We can also ask the model to write answer in multiple tunes like formal or informal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d083f79b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Universal Translator\n",
+    "user_messages = [\n",
+    "  \"La performance du système est plus lente que d'habitude.\",  # System performance is slower than normal         \n",
+    "  \"Mi monitor tiene píxeles que no se iluminan.\",              # My monitor has pixels that are not lighting\n",
+    "  \"Il mio mouse non funziona\",                                 # My mouse is not working\n",
+    "  \"Mój klawisz Ctrl jest zepsuty\",                             # My keyboard has a broken control key\n",
+    "  \"我的屏幕在闪烁\"                                               # My screen is flashing\n",
+    "] \n",
+    "\n",
+    "for issue in user_messages:\n",
+    "    prompt = f\"Tell me what language this is: ```{issue}```\"\n",
+    "    lang = get_completion(prompt)\n",
+    "    print(f\"Original message ({lang}): {issue}\")\n",
+    "\n",
+    "    prompt = f\"\"\"\n",
+    "    Translate the following  text to English \\\n",
+    "    and Korean: ```{issue}```\n",
+    "    \"\"\"\n",
+    "    response = get_completion(prompt)\n",
+    "    print(response, \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "854efda1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Tone transformation\n",
+    "prompt = f\"\"\"\n",
+    "Translate the following from slang to a business letter: \n",
+    "'Dude, This is Joe, check out this spec on this standing lamp.'\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2968dc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# transform the type (json to HTML).\n",
+    "data_json = { \"resturant employees\" :[ \n",
+    "    {\"name\":\"Shyam\", \"email\":\"shyamjaiswal@gmail.com\"},\n",
+    "    {\"name\":\"Bob\", \"email\":\"bob32@gmail.com\"},\n",
+    "    {\"name\":\"Jai\", \"email\":\"jai87@gmail.com\"}\n",
+    "]}\n",
+    "\n",
+    "prompt = f\"\"\"\n",
+    "Translate the following python dictionary from JSON to an HTML \\\n",
+    "table: {data_json}\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt)\n",
+    "print(response)\n",
+    "\n",
+    "#display the html response\n",
+    "from IPython.display import display, Markdown, Latex, HTML, JSON\n",
+    "display(HTML(response))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ad0c3f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#spell check or grammer check\n",
+    "text = [ \n",
+    "  \"The girl with the black and white puppies have a ball.\",  # The girl has a ball.\n",
+    "  \"Yolanda has her notebook.\", # ok\n",
+    "  \"Its going to be a long day. Does the car need it’s oil changed?\",  # Homonyms\n",
+    "  \"Their goes my freedom. There going to bring they’re suitcases.\",  # Homonyms\n",
+    "  \"Your going to need you’re notebook.\",  # Homonyms\n",
+    "  \"That medicine effects my ability to sleep. Have you heard of the butterfly affect?\", # Homonyms\n",
+    "  \"This phrase is to cherck chatGPT for speling abilitty\"  # spelling\n",
+    "]\n",
+    "for t in text:\n",
+    "    prompt = f\"\"\"Proofread and correct the following text\n",
+    "    and rewrite the corrected version. If you don't find\n",
+    "    any errors, just say \"No errors found\". Don't use \n",
+    "    any punctuation around the text:\n",
+    "    ```{t}```\"\"\"\n",
+    "    response = get_completion(prompt)\n",
+    "    print(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "705f7936",
+   "metadata": {},
+   "source": [
+    "## Expansion capability of model\n",
+    "\n",
+    "We can ask model to use a piece of text to generate something else.For example,we can generate an AI generated reply mail from a user review."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b4a5d194",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# given the sentiment from the lesson on \"inferring\",\n",
+    "# and the original customer message, customize the email\n",
+    "sentiment = \"negative\"\n",
+    "\n",
+    "# review for a blender\n",
+    "review = f\"\"\"\n",
+    "So, they still had the 17 piece system on seasonal \\\n",
+    "sale for around $49 in the month of November, about \\\n",
+    "half off, but for some reason (call it price gouging) \\\n",
+    "around the second week of December the prices all went \\\n",
+    "up to about anywhere from between $70-$89 for the same \\\n",
+    "system. And the 11 piece system went up around $10 or \\\n",
+    "so in price also from the earlier sale price of $29. \\\n",
+    "So it looks okay, but if you look at the base, the part \\\n",
+    "where the blade locks into place doesn’t look as good \\\n",
+    "as in previous editions from a few years ago, but I \\\n",
+    "plan to be very gentle with it (example, I crush \\\n",
+    "very hard items like beans, ice, rice, etc. in the \\ \n",
+    "blender first then pulverize them in the serving size \\\n",
+    "I want in the blender then switch to the whipping \\\n",
+    "blade for a finer flour, and use the cross cutting blade \\\n",
+    "first when making smoothies, then use the flat blade \\\n",
+    "if I need them finer/less pulpy). Special tip when making \\\n",
+    "smoothies, finely cut and freeze the fruits and \\\n",
+    "vegetables (if using spinach-lightly stew soften the \\ \n",
+    "spinach then freeze until ready for use-and if making \\\n",
+    "sorbet, use a small to medium sized food processor) \\ \n",
+    "that you plan to use that way you can avoid adding so \\\n",
+    "much ice if at all-when making your smoothie. \\\n",
+    "After about a year, the motor was making a funny noise. \\\n",
+    "I called customer service but the warranty expired \\\n",
+    "already, so I had to buy another one. FYI: The overall \\\n",
+    "quality has gone done in these types of products, so \\\n",
+    "they are kind of counting on brand recognition and \\\n",
+    "consumer loyalty to maintain sales. Got it in about \\\n",
+    "two days.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99985c36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = f\"\"\"\n",
+    "You are a customer service AI assistant.\n",
+    "Your task is to send an email reply to a valued customer.\n",
+    "Given the customer email delimited by ```, \\\n",
+    "Generate a reply to thank the customer for their review.\n",
+    "If the sentiment is positive or neutral, thank them for \\\n",
+    "their review.\n",
+    "If the sentiment is negative, apologize and suggest that \\\n",
+    "they can reach out to customer service. \n",
+    "Make sure to use specific details from the review.\n",
+    "Write in a concise and professional tone.\n",
+    "Sign the email as `AI customer agent`.\n",
+    "Customer review: ```{review}```\n",
+    "Review sentiment: {sentiment}\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt,temperatur=0.7)\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bfac1a8",
+   "metadata": {},
+   "source": [
+    "### Temperature parameter\n",
+    "Temperatur parameter is used to introduce randomness in the response of model.If temperature is zero,then model always picks the next word which has best confidence.For example,After \"My Best Food is\",it will always picks up pizza as pizza has the highest probability if the temperature is zero.But if temperature is not zero,then it might also pick up other words like tacos,burger etc.This randomness increases as we increase the temperature.So here are following tips for using the temperature parameter.\n",
+    "\n",
+    "* If we want the output to be predictable.For example during transformation use cases,we can keep the temperature to be zero.\n",
+    "* If we want the output to be more creative and random,for example in chatbot or a poem generation,we can should increase the temperature.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f954465",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cadf459c",
+   "metadata": {},
    "source": []
   }
  ],
