Finished the course

--- a/Prompt Engineering Course.ipynb
+++ b/Prompt Engineering Course.ipynb
@@ -38,6 +38,16 @@
     "        messages=messages,\n",
     "        temperature=0, # this is the degree of randomness of the model's output\n",
     "    )\n",
+    "    return response.choices[0].message[\"content\"]\n",
+    "\n",
+    "\n",
+    "def get_completion_from_messages(messages, model=\"gpt-3.5-turbo\", temperature=0):\n",
+    "    response = openai.ChatCompletion.create(\n",
+    "        model=model,\n",
+    "        messages=messages,\n",
+    "        temperature=temperature, # this is the degree of randomness of the model's output\n",
+    "    )\n",
+    "#     print(str(response.choices[0].message))\n",
     "    return response.choices[0].message[\"content\"]"
    ]
   },
@@ -213,7 +223,7 @@
     "response = get_completion(prompt)\n",
     "print(response)\n",
     "\n",
-    "##In this example model is not able to understand the reasoning clearly.The answer given by Model is \"Red\".But the actual answer is "
+    "##In this example model is not able to understand the reasoning clearly.The answer given by Model is \"Red\".But the actual answer is orange."
    ]
   },
   {
@@ -408,7 +418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#some the model can create information that is not actually present\n",
+    "#sometime the model can create information that is not actually present\n",
     "prompt = f\"\"\"\n",
     "Tell me about AeroGlide UltraSlim Smart Toothbrush by Boie\n",
     "\"\"\"\n",
@@ -1045,12 +1055,143 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0138537b",
+   "metadata": {},
+   "source": [
+    "## ChatBOT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28e0aba9",
+   "metadata": {},
+   "source": [
+    "### Let firstly understand how does the model works internally while using the ChatGPT web interface.\n",
+    "\n",
+    "So, in general ChatGPT is a chat based model where a user give a input to a assistant and assistant replies to that input.\n",
+    "\n",
+    "                Assistant\n",
+    "                 ↑  ↓\n",
+    "                 User\n",
+    "\n",
+    "Every new call to the model is a new conversation,so to let the model gives answers based on previous conversation,we need to give the previous conversation along with the current query as an input to the model.The previous conversation is called \"context\" for the model.\n",
+    "\n",
+    "Now before starting a conversation with the model,we can also specify how does the model should behave during conversation.So for a chatbot,there are generaly three type of prompts in a conversation.\n",
+    "\n",
+    "1. system: specifies how does the models should behaves.For example,we can ask the model to be a friendly assistant and answer like Shakespeare.\n",
+    "\n",
+    "2. assistant : The message by the model.\n",
+    "\n",
+    "3. user : The message by the user.\n",
+    "\n",
+    "                   System \n",
+    "                      ↓ (only once in a conversion)\n",
+    "                   Assistant\n",
+    "                    ↑  ↓  (repeated conversation)\n",
+    "                    User              "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5f954465",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# lets try this practically\n",
+    "messages =  [  \n",
+    "{'role':'system', 'content':'You are an assistant that speaks like Shakespeare.'},  #sets the assistant behaviour in this conversation  \n",
+    "{'role':'user', 'content':'tell me a joke'},   \n",
+    "{'role':'assistant', 'content':'Why did the chicken cross the road'},   \n",
+    "{'role':'user', 'content':'I don\\'t know'}  ]\n",
+    "\n",
+    "response = get_completion_from_messages(messages, temperature=1)\n",
+    "print(response) #will give response according to previous conversation and the behaviour specified by the system."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2228b2c0",
+   "metadata": {},
+   "source": [
+    "## JasonBOT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "061c32ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def collect_messages(_):\n",
+    "    prompt = inp.value_input\n",
+    "    inp.value = ''\n",
+    "    context.append({'role':'user', 'content':f\"{prompt}\"})\n",
+    "    response = get_completion_from_messages(context) \n",
+    "    context.append({'role':'assistant', 'content':f\"{response}\"})\n",
+    "    panels.append(\n",
+    "        pn.Row('User:', pn.pane.Markdown(prompt, width=600)))\n",
+    "    panels.append(\n",
+    "        pn.Row('Assistant:', pn.pane.Markdown(response, width=600, style={'background-color': '#F6F6F6'})))\n",
+    " \n",
+    "    return pn.Column(*panels)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7afc6b1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import panel as pn  # GUI\n",
+    "pn.extension()\n",
+    "\n",
+    "panels = [] # collect display \n",
+    "\n",
+    "context = [ {'role':'system', 'content':\"\"\"\n",
+    "You are an JasonBot.A chatbot that can give answers to questions about Jason.\n",
+    "Only give answer if you can found the exact answer in the given information about the Jason.Do not create your own answer.If answer is not found then give the following answer \n",
+    "```\n",
+    "Sorry,I do not know.\n",
+    "```\n",
+    "\n",
+    "Please use the following information about Jason to answer any question asked to you.\n",
+    "```\n",
+    "Name : Jason Derulo\n",
+    "Age : 24\n",
+    "Color : Brown\n",
+    "Relationship Status : Not single\n",
+    "Girlfriend Name : Nora Fatehi\n",
+    "Mother Name : Angelina\n",
+    "Father Name : Brad\n",
+    "Sister Name : Kim\n",
+    "Best Food : Paneer Curry\n",
+    "Best Sports: Football\n",
+    "Education : Graduate\n",
+    "Alma Matter : Stanford\n",
+    "Job Satus : AI Engineer at OpenAI\n",
+    "Other features : Shy,Smart,Intelligent,Healthy\n",
+    "Weight : 65kg\n",
+    "```\n",
+    "\"\"\"} ]  # accumulate messages\n",
+    "\n",
+    "\n",
+    "inp = pn.widgets.TextInput(value=\"Hi\", placeholder='Enter text here…')\n",
+    "button_conversation = pn.widgets.Button(name=\"Chat!\")\n",
+    "\n",
+    "interactive_conversation = pn.bind(collect_messages, button_conversation)\n",
+    "\n",
+    "dashboard = pn.Column(\n",
+    "    inp,\n",
+    "    pn.Row(button_conversation),\n",
+    "    pn.panel(interactive_conversation, loading_indicator=True, height=300),\n",
+    ")\n",
+    "\n",
+    "dashboard"
+   ]
   },
   {
    "cell_type": "markdown",
